--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/express-server.js",
-    "build": "browserify -t [ babelify --presets [ es2015 stage-0 react ] ] ./src/react-components/app.js -o ./public/js/app.js",
+    "build": "browserify -t [ babelify --presets [ es2015 stage-0 react ] --plugins [transform-decorators-legacy] ] ./src/react-components/app.js -o ./public/js/app.js",
     "build:watch": "watch 'npm run build' src"
   },
   "repository": {
@@ -19,11 +19,16 @@
   },
   "homepage": "https://github.com/yjkimjunior/Shuffle-MVP#readme",
   "dependencies": {
+    "alt": "^0.18.5",
+    "alt-utils": "^1.0.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "babelify": "^7.3.0",
     "express": "^4.14.0",
+    "firebase": "^3.2.0",
+    "lodash": "^4.13.1",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-masonry-component": "^4.2.1",
