--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "firebase": "^3.2.0",
     "lodash": "^4.13.1",
     "react": "^15.2.1",
+    "react-addons-css-transition-group": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-masonry-component": "^4.2.1",
     "react-sticky": "^5.0.4",
