--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-addons-css-transition-group": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-masonry-component": "^4.2.1",
+    "react-scroll": "^1.1.3",
     "react-sticky": "^5.0.4",
     "watch": "^0.19.1"
   }
