--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babelify": "^7.3.0",
     "express": "^4.14.0",
     "firebase": "^3.2.0",
+    "formsy-react": "^0.18.1",
     "lodash": "^4.13.1",
     "react": "^15.2.1",
     "react-addons-css-transition-group": "^15.2.1",
