--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lodash": "^4.13.1",
     "react": "^15.2.1",
     "react-addons-css-transition-group": "^15.2.1",
+    "react-bootstrap": "^0.30.2",
     "react-dom": "^15.2.1",
     "react-masonry-component": "^4.2.1",
     "react-sticky": "^5.0.4",
