--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "babelify": "^7.3.0",
+    "connect-history-api-fallback": "^1.3.0",
     "express": "^4.14.0",
     "firebase": "^3.2.0",
     "formsy-react": "^0.18.1",
@@ -33,8 +34,12 @@
     "react": "^15.2.1",
     "react-addons-css-transition-group": "^15.2.1",
     "react-bootstrap": "^0.30.5",
+    "react-bootstrap-date-picker": "^3.7.0",
+    "react-bootstrap-modal": "^3.0.0",
     "react-dom": "^15.2.1",
+    "react-lazy-load": "^3.0.10",
     "react-masonry-component": "^4.2.1",
+    "react-popup": "^0.4.2",
     "react-router": "^2.8.1",
     "react-scroll": "^1.1.3",
     "react-sticky": "^5.0.4",
